src/snapshots/poly_tui__ui__tests__balance_no_positions.snap
---
source: src/ui.rs
expression: render_to_buffer(&s)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $173.69                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● BTC  refresh: 30s  last: --
