src/snapshots/poly_tui__ui__tests__balance_one_losing.snap
---
source: src/ui.rs
expression: render_to_buffer(&s)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $173.69                      │
│         Holding: 10 UP @ $0.500  now $4.85 (-3%)         │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● Chainlink  refresh: 30s  last:
