src/snapshots/poly_tui__ui__tests__balance_one_winning.snap
---
source: src/ui.rs
expression: render_to_buffer(&s)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $173.69                      │
│         Holding: 10 UP @ $0.500  now $8.50 (+70%)        │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  refresh: 30s  last: --    q quit
