src/snapshots/poly_tui__ui__tests__balance_two_positions.snap
---
source: src/ui.rs
expression: render_to_buffer(&s)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $173.69                      │
│         Holding: 10 UP @ $0.500  now $4.85 (-3%)         │
│         Holding: 20 UP @ $0.480  now $10.40 (+8%)        │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● Chainlink  refresh: 30s  last:
