src/snapshots/poly_tui__ui__tests__market_diff_rounds_to_zero.snap
---
source: src/ui.rs
expression: render_to_buffer(&state)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC 80,425 → 80,425  ±0   ⏱  4:40                          
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  refresh: 30s  last: --    q quit
