src/snapshots/poly_tui__ui__tests__market_no_data.snap
---
source: src/ui.rs
expression: render_to_buffer(&state)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  refresh: 30s  last: --    q quit
