src/snapshots/poly_tui__ui__tests__market_only_current.snap
---
source: src/ui.rs
expression: render_to_buffer(&state)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC -- → 80,431  --   ⏱  4:40                              
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● Chainlink  refresh: 30s  last:
