src/snapshots/poly_tui__ui__tests__market_rolling.snap
---
source: src/ui.rs
expression: render_to_buffer(&s)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC 80,425 → 80,425  ±0   ⏱  rolling…                      
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● BTC  refresh: 30s  last: --
