src/snapshots/poly_tui__ui__tests__market_rpc_stale.snap
---
source: src/ui.rs
expression: render_to_buffer(&state)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC 80,425 → 80,431  +6   ⏱  4:40                          
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● Chainlink  refresh: 30s  last:
