src/snapshots/poly_tui__ui__tests__trader_lagging.snap
---
source: src/ui.rs
expression: render_to_buffer(&state)
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 LIVE  Trader  UP  ladder=1  P&L: $0                        
22:15:20  SessionStarted                                    
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● Chainlink  refresh: 30s  last:
